--- a/src/Card/Card.module.css
+++ b/src/Card/Card.module.css
@@ -1,19 +1,20 @@
 .card {
     width: 384px;
     height: 280px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+    border-radius: 16px;
+    padding: 28px 24px 24px 24px;
+    box-shadow: 0 2px 13px 0 rgba(0,0,0,0.08);
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    position: relative;
 }
 
 .cardContent { 
     display: flex;
-    gap: 10px;
+    gap: 14px;
+    padding-bottom: 16px;
+    border-bottom: 1px solid rgba(238, 238, 238, 1);
 }
 
 .userInfo {
@@ -23,8 +24,8 @@
     margin-left: 10px;
 }   
 .profileImg {
-    width: 50px;
-    height: 50px;
+    width: 56px;
+    height: 56px;
     border-radius: 50%;
 }
 
@@ -53,22 +54,31 @@
     justify-content: center;
 }
 
-/*.cardDesc {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}*/
+.deleteIcon {
+    position: absolute;
+    top: 28px;
+    right: 32px;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 6px;
+    border: 1px solid #CCCCCC;
+    padding: 8px;
+}
 
 .messageContent {
     width: 336px;
     height: 106px;
     font-size: 18px;
     line-height: 1.5;
-    margin-top: 10px;
-    border-top: 1px solid rgba(128, 128, 128, 0.4);
+    margin-top: 16px;
+    color: #4A4A4A;
 }
 
 .writtenDate {
     font-size: 12px;
     color: #999999;
+    position: absolute;
+    bottom: 24px;
+    left: 24px;
 }
