--- a/src/Card_list/Card_list.module.css
+++ b/src/Card_list/Card_list.module.css
@@ -3,12 +3,12 @@
     height: 260px;
     border-radius: 16px;
     box-sizing: border-box;
-    padding: 25px 20px 15px 20px;
+    padding: 30px 24px 20px 24px;
     background-color: rgba(220, 185, 255, 0.4);
     position: relative;
     overflow: hidden;
     border: 1px solid rgba(128, 128, 128, 0.2);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 13px rgba(0, 0, 0, 0.08);
 }
 
 .cardDeco {
@@ -84,7 +84,7 @@
 .imojiWrapper {
     display: flex;
     align-items: end;
-    margin-top: 20px;
+    margin-top: 17px;
     padding-top: 18px;
     border-top: 1px solid rgba(128, 128, 128, 0.4);
     position: absolute;
@@ -92,12 +92,13 @@
 }
 
 .imoji {
-    width: 65px;
+    width: 66px;
     height: 36px;
     margin-right: 8px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.54);
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 18px;
+    border-radius: 32px;
+    padding: 8px 12px;
 }
